# life-monitor

./: .codespellrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SUMMARY.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  deny.toml  flake.nix  icon-resource.rc  lint.sh  logs  tasks.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  nix.yml  no-nix.yml  release.yml
api-examples/: example_config.json
examples/: channels.rs  handling_conns.rs  logger.rs  openbrowser.rs  tasks.rs  try.rs  values_dropped.rs
learning/: installer.rs
rdev-0.5.3/src/linux/: listen.rs
rdev-0.5.3/src/windows/: listen.rs
src/: api.rs  args.rs  backend.rs  common.rs  data.rs  db.rs  input_event_codes.rs  keylogger.rs  lib.rs  localdb.rs  lock.rs  log.rs  logger.rs  main.rs  main_complete.rs  process.rs  processinfo.rs  test.rs  time_tracking.rs
src/common/: buckets.rs  focus.rs  input.rs  motion.rs  paths.rs  process.rs  ticker.rs  types.rs
src/linux/: process.rs  util.rs
src/platform/: common.rs  mod.rs
src/platform/linux/: common.rs  inputs.rs  mod.rs  process.rs  util.rs  wayland.rs  x11.rs
src/platform/win/: process.rs  util.rs
src/platform/windows/: common.rs  inputs.rs  mod.rs  process.rs  startup.rs  systray.rs
src/storage/: api.rs  backend.rs  localdb.rs  mod.rs  remote.rs
src/storage/localdb/: analytics.rs  config.rs  export.rs  import.rs  integrity.rs  rows.rs  schema.rs
src/sync/: mod.rs  outbox.rs  pull.rs  push.rs  remote.rs  runtime.rs  state.rs  status.rs  tests.rs  types.rs
src/tui/: app.rs  data.rs  mod.rs  ui.rs
src/utils/: args.rs  dpi.rs  lock.rs  logger.rs  mod.rs
src/win/: mod.rs  process.rs  systray.rs  util.rs
src/windows/: process.rs  util.rs
tests/: api.rs  localdb.rs
www/: index.html  index.js  main.py
