[package]
name = "life-monitor"
version = "0.1.6"
edition = "2021"
authors = ["Davi Aguiar moraes@akmee.xyz"]
description = "A tool to track your daily activities"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akamee666/life-monitor"
keywords = ["cli", "tracker", "productivy"]
categories = ["command-line-utilities"]

[[bin]]
name = "life-monitor"
path = "src/main.rs"

[features]
default = ["wayland"]
x11 = ["x11rb"]
wayland = ["wayland-client", "wayland-protocols-wlr"]
multi-sync = ["dep:libsql"]

[dependencies]
anyhow = "1.0.99"
chrono = "=0.4.41"
tracing = "0.1.40"
tracing-subscriber = { version="^0.3", features = ["env-filter"]  }
tokio = { version = "^1.47", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "sync",
  "net",
]}
sysinfo = "0.37.0"
clap = { version = "4.5.18", features = ["derive"] }
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }
libsql = { version = "0.9.30", default-features = false, features = ["remote", "tls"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "backup"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Devices",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_SystemInformation",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_HiDpi",
]}

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = { version = "0.37.0", features = ["backup"] }
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"], optional = true }
nix = { version = "0.30.1", features = ["fs", "ioctl", "event"] }
x11rb = { version="0.13.1", features = ["all-extensions"], optional = true }

[build-dependencies]
embed-resource = "2.3"

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.72.1"
